[tool.poetry]
name = "respy3"
version = "0.5.0"
description = "A RESP3 protocol parser for Python"
authors = ["Harrison Morgan <harrison.morgan@gmail.com>"]
license = "bsd-3-clause"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"
pytest = "^6.0.1"
coverage = {extras = ["toml"], version = "^5.2.1"}
pytest-cov = "^2.10.1"
sphinx = "^3.2.1"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.2"
sphinx-autodoc-typehints = "^1.11.0"
sphinx-autoapi = "^1.4.0"
codecov = "^2.1.8"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["respy3"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
